--- a/Text_Generation_with_LSTM.ipynb
+++ b/Text_Generation_with_LSTM.ipynb
@@ -33,26 +33,151 @@
         "colab_type": "text"
       },
       "source": [
+        "# Deep Learning for Natural Language Processing - III \n",
+        "\n",
+        "## Introduction\n",
+        "\n",
         "In this Notebook, we shall generate text from **Francis Ford Coppola's Masterpiece Apocalypse Now**. We will use \n",
-        "an **LSTM network** with 2 layers to build  a **Languague model**.  We'll surely have bots writing scripts for us in the \n",
+        "an **LSTM network**  to build a  **Languague model**.  We'll surely have bots writing scripts for us in the \n",
         "future!\n",
         "\n",
-        "First, let's get a high level walkthrough of what the model: **LSTM** , and an exciting techinque in NLP called LANGAUGE MODELLING are all about.  We will then see how how the two are used to generate text. \n",
+        "First, let's go through a high level walkthrough of what an **LSTM**  model, and an exciting techinque in NLP called **LANGAUGE MODELLING** are.  We will then see how the two are used to generate text. \n",
         "\n",
-        "The code reference for this, almost verbatim the same is : \"[link text](https://github.com/LeanManager/NLP-PyTorch/blob/master/Character-Level%20LSTM%20with%20PyTorch.ipynb)\" \n",
+        "The code reference for this is : \"[Generate text from Anna Karenina with LSTMs'](https://github.com/LeanManager/NLP-PyTorch/blob/master/Character-Level%20LSTM%20with%20PyTorch.ipynb)\" \n",
+        "\n",
+        "NOTE: Regarding prerequisites, I assume the following:\n",
+        "\n",
+        "1.  A working knowledge of Recurrent Neural Networks.\n",
+        "2.   Comfortable with the theory behind gradient descent and backprpogation.\n",
+        "\n",
+        "Though not strictly required, you will get the most out of this if your fundamentals on those topics are not shaky. \n",
         "\n",
         "\n",
-        "**LSTM**"
+        "# **Long Short Term Memory Networks**\n",
+        "\n",
+        "LSTM networks operate on *sequence type data like text*. The sequence in consideration could be at two levels.\n",
+        "\n",
+        "1.   Word Level: We consider sentences to be sequences of words.\n",
+        "\n",
+        "2.   Character Level: The input space here is the English alphabet, both lowercase and uppercase. We can add punctuation marks and extra symbols  based on the problem we are trying to model.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v_fpbYpCdMLW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Display Images \n",
+        "from IPython.display import Image, display\n",
+        "display(Image(\"1.jpeg\"))\n",
+        "display(Image(\"2.jpeg\"))\n",
+        "\n",
+        "Image(\"1.jpeg\", width=20, height=20)\n",
+        "Image(\"2.jpeg\", width=20, height=20)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GDxWG3utYWBj",
+        "colab_type": "text"
+      },
+      "source": [
+        "Here is a picture of lstm in action. \n",
+        "\n",
+        "![alt text](http://karpathy.github.io/assets/rnn/charseq.jpeg)\n",
+        "\n",
+        "Image Source: [Andrej Kaprthy](http://karpathy.github.io/2015/05/21/rnn-effectiveness/)\n",
+        "\n",
+        "Breif decsirption of what's going on in the picture:\n",
+        "\n",
+        "1.   One-hot encode each character from our vocabulary, i.e. the set of unique characters in our dataset\n",
+        "2.   Feed each character into an LSTM layer, the hidden layer in our dataset.\n",
+        "3.   Finally, feed the output from the LSTM layer into an output layer.\n",
+        "\n",
+        "\n",
+        "There are **three parameter matrices that are 'learnt' during backpropogation for an LSTM network. **\n",
+        "\n",
+        "1.   **W_xh**: This is a \"linear map\" : $\\ {y} = {M.X + b}$  at each time step t.\n",
+        "\n",
+        "$\\ {W_{xh} * X_t + b_x}$   - eq 1\n",
+        "\n",
+        "2.  **W_hh**: The matrix with weights and biases for the hidden layer in out network. \n",
+        "\n",
+        "\n",
+        "$\\ {W_{hh} * H_{t-1} + b_h}$ - eq 2\n",
+        "\n",
+        "\n",
+        "3    **W_hy** : The linear layer after the LSTM layer.\n",
+        "\n",
+        "This map operates on the input obtained from eq 1 and eq 2. This inturn though not shown in the diagram is fed into a Softmax Layer . This gives us a probability distribution over each character.  We shall see the equation for this later.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vzAlda2I69d4",
+        "id": "qZlz-k0C9qQD",
         "colab_type": "text"
       },
       "source": [
-        "Install Pypdf2 to extract data from pdf file."
+        "Zooming into each LSTM unit in the hidden layer. \n",
+        "\n",
+        "![alt text](https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/The_LSTM_cell.png/255px-The_LSTM_cell.png)\n",
+        "\n",
+        "\n",
+        "Each unit of the lstm layer has gates which regulate the flow of information. The regulations allows for LSTMs' to remember long range dependencies in text by deciding which information to pass on to the next time step and which information to keep. \n",
+        "\n",
+        "1.   Input Gate : $\\ {i_t = \\sigma(W_{ii} * x_t + b_{ii} + W_{hi} * h_{t-1} + b_{hi} )} $\n",
+        "2.   Forget gate: $\\ { f_t = \\sigma(W_{if} * x_t + b_{if} + W_{hf} * h_{t-1} + b_{hf})} $\n",
+        "3.   Cell gate: $\\ {g_t  = \\tanh(W_{ig} * x_t + b_{ig} + W_{hg} * h_{t-1} + b_{hg})} $\n",
+        "4.   Output gate = $\\ {o_t = \\sigma(W_{io} * x_t + b_{io} + W_{ho} * h_{t-1} + b_{ho}) }$\n",
+        "\n",
+        "CELL STATE: $ \\ {c_t = f_t * c_{t-1} + i_t * g_t} $\n",
+        "\n",
+        "Hidden state at time t: $\\ {h_t = o_t * tanh(c_t)} $\n",
+        "\n",
+        "$\\ {\\sigma}$ : The sigmoid activation function.\n",
+        "\n",
+        "$\\ {\\tanh}$: The Hyperbolic Tangent.\n",
+        "\n",
+        "The forget gate measures the importance of the previous cell state, the cell gate measures the importance of the input at the current time step. \n",
+        "\n",
+        "Both the gates have sigmoid activation fucntions. \n",
+        "\n",
+        "In a Deep LSTM with multiple layers the output from one layer becomes the input to another layer. The deeper layer will have it's own hidden matrices, but the input, i.e. the $\\ {x_t}$ for every time step t will be the output of the previous layer at  that very time step. \n",
+        "\n",
+        "The hidden state at time t  $\\ h_t$ is passed into a linear layer at every time step t, the \n",
+        "\n",
+        "Thus $\\ {a_t = W_{ho}* h_t + b_{ho}} $\n",
+        "\n",
+        "$\\ {W_ho}$ is the hidden to output matrix we spoke about earlier\n",
+        "\n",
+        "Here \"*ho*\" stands for hidden layer to output layer. Trying to be as consistent as possible with notation. There isn't any activation for this layer. But it's passed into a softmax layer which gives us a probability distribution over our vocabulary. \n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -60,33 +185,14 @@
       "metadata": {
         "id": "D38jGWA06zIl",
         "colab_type": "code",
-        "outputId": "42c6b184-d4da-4e6e-e556-14fcca55b7ff",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 170
-        }
+        "colab": {}
       },
       "source": [
+        "# PyPDF2: Extract text from PDF.\n",
         "pip install PyPDF2"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting PyPDF2\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/b4/01/68fcc0d43daf4c6bdbc6b33cc3f77bda531c86b174cac56ef0ffdb96faab/PyPDF2-1.26.0.tar.gz (77kB)\n",
-            "\u001b[K     |████████████████████████████████| 81kB 6.4MB/s \n",
-            "\u001b[?25hBuilding wheels for collected packages: PyPDF2\n",
-            "  Building wheel for PyPDF2 (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Stored in directory: /root/.cache/pip/wheels/53/84/19/35bc977c8bf5f0c23a8a011aa958acd4da4bbd7a229315c1b7\n",
-            "Successfully built PyPDF2\n",
-            "Installing collected packages: PyPDF2\n",
-            "Successfully installed PyPDF2-1.26.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -96,7 +202,7 @@
         "colab": {}
       },
       "source": [
-        "# import all libraries\n",
+        "# All Imports\n",
         "\n",
         "import torch\n",
         "from PyPDF2 import PdfFileReader\n",
@@ -113,42 +219,37 @@
       "metadata": {
         "id": "E5Ncixiaxfhi",
         "colab_type": "code",
-        "outputId": "98e1e9d6-c4c0-4716-de63-f5a2eb6603ed",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        }
+        "colab": {}
       },
       "source": [
+        "# Check for cuda\n",
+        "\n",
         "if torch.cuda.is_available():\n",
         "  print('The power of the GPU is with you!')\n",
         "else:\n",
         "  print('Trainingi your model forever!')\n",
         "  \n",
-        "  \n",
+        "# get GPU name of the device\n",
+        "\n",
         "torch.cuda.get_device_name()"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "The power of the GPU is with you!\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Tesla K80'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 76
-        }
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EHjb27kEUVDN",
+        "colab_type": "text"
+      },
+      "source": [
+        "The PDF for Apocalypse Now was on my local machine,  I then uploaded the same to Colab. \n",
+        "\n",
+        "The following is a link to the screenplay.\n",
+        "\n",
+        "[Apocalypse Now Screenplay](http://www.screenplay.com/downloads/scripts/Apocalypse%20Now.pdf)\n",
+        "\n",
+        "Here we read the file object, loop through each page and extract all the data inot a huge string. "
       ]
     },
     {
@@ -164,6 +265,7 @@
         "file_object = open(path, 'rb')\n",
         "\n",
         "def read_data(file_object):\n",
+        "  \"\"\" reads file object, decrypts and returns data\"\"\"\n",
         "\n",
         "    data = PdfFileReader(file_object)\n",
         "\n",
@@ -174,6 +276,7 @@
         "\n",
         "\n",
         "def extract_all_data(data):\n",
+        "  \"\"\"Extracts data as a raw string\"\"\"\n",
         "\n",
         "    text = ''\n",
         "\n",
@@ -189,7 +292,7 @@
         "# Extracting file object\n",
         "file_object = read_data(\"Apocalypse_Now.pdf\")\n",
         "\n",
-        "# reading data into data_list, every page of our pdf is a string\n",
+        "# reading data.\n",
         "text = extract_all_data(file_object)  # length = 138, numofPages."
       ],
       "execution_count": 0,
@@ -256,6 +359,7 @@
       },
       "source": [
         "def one_hot_encode(arr, n_labels):\n",
+        "  \"\"\"One hot encode each character from our vocabulary\"\"\"\n",
         "\n",
         "    # Initialize the encoded array\n",
         "    one_hot = np.zeros((np.multiply(*arr.shape), n_labels), dtype=np.float32)\n",
@@ -267,7 +371,8 @@
         "    one_hot = one_hot.reshape((*arr.shape, n_labels))\n",
         "\n",
         "    return one_hot\n",
-        " \n",
+        "\n",
+        "# check for ch2int dict\n",
         "ch = np.array([[char2int['w']]])\n",
         "print(ch)\n",
         "print(ch.shape)"
@@ -297,6 +402,7 @@
       },
       "source": [
         "def get_batches(arr, n_seqs, n_steps):\n",
+        "  \"\"\" Create batch_size * seq_len batches from the encoded array\"\"\"\n",
         "\n",
         "    batch_size = n_seqs * n_steps\n",
         "\n",
@@ -338,12 +444,15 @@
         "\n",
         "        yield x, y\n",
         "        \n",
+        "# encoded array contains integers for every character\n",
         "batches = get_batches(encoded, 10, 40)\n",
         "x, y = next(batches)\n",
-        "# five rows,\n",
+        "\n",
+        "# five rows\n",
         "print(x[:5])\n",
         "print('')\n",
-        "print(y[:5])"
+        "print(y[:5])\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": [
@@ -377,6 +486,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bk5X7SCbYzLd",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Langauge model\n",
+        "\n",
+        "Notice the input and output batches. The output y is shifted by one unit to the right. Thus the model at each time step predicts the probability of the next character occuring. \n",
+        "\n",
+        "SInce people like to be fancy with terminology, they call it a LANGUAGE MODEL. Also if we think about it, each input is a sequence and so is each output unlike  a normal neural network in which we map one input to one output. These networks are therefor called \"*Sequence to Sequence models*\"\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "5CQR06a6BnTT",
@@ -385,6 +508,7 @@
       },
       "source": [
         "class CharLSTM(nn.Module):\n",
+        "  \"\"\"LSTM model for language generation\"\"\"\n",
         "\n",
         "    def __init__(self, chars, hidden_size, n_layers=2, drop_out=0.5, lr= 0.001):\n",
         "\n",
@@ -482,6 +606,7 @@
         "        return self.int2char[char], h\n",
         "\n",
         "    def init_weights(self):\n",
+        "      \"\"\"initialize weights for the linear layer of our netwokr\"\"\"\n",
         "\n",
         "        initrange = 0.1\n",
         "\n",
@@ -489,6 +614,7 @@
         "        self.fc.weight.data.uniform_(-1, 1)\n",
         "\n",
         "    def init_hidden(self, n_seqs):\n",
+        "      \"\"\"initialize the weights for the hiddena and cell state to zero\"\"\"\n",
         "\n",
         "        weight = next(self.parameters()).data\n",
         "        return (weight.new(self.n_layers, n_seqs, self.hidden_size).zero_(),\n",
@@ -496,6 +622,30 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FhxFpBgbaqOq",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Traning \n",
+        "\n",
+        "1. Initialize hidden and cell states to zero. \n",
+        "\n",
+        "2. Feed one hot encoded vector to network. Model predicts the probability of all characters occuring given hidden and cell states only.\n",
+        "\n",
+        "3. From the next time step onwards feed the actual character, the model then predicts the probability of the next character given that the input has already occured. \n",
+        "\n",
+        "4. At each time step, at the output layer is a **loss fucntion** which compares the output to the prediction. \n",
+        "\n",
+        "5. This loss i summed for all time steps. \n",
+        "\n",
+        "6. We then coompute the gradient of this loss w.r.t to the parameters in our network for each time step . \n",
+        "\n",
+        "7. Since we unroll the network for each time step, the algorithm is called \"Backpropogation through time\""
+      ]
     },
     {
       "cell_type": "code",
@@ -623,6 +773,7 @@
         }
       },
       "source": [
+        "# Instantiate our model\n",
         "model = CharLSTM(chars, hidden_size=512, n_layers=2)\n",
         "model"
       ],
@@ -658,6 +809,7 @@
         }
       },
       "source": [
+        "# set batch_size, sequence length and train\n",
         "n_seqs, n_steps = 128, 100\n",
         "train(model, encoded, epochs=25, n_seqs=n_seqs, n_steps=n_steps, lr=0.001, cuda=True, print_every=10)"
       ],
@@ -706,6 +858,7 @@
         "colab": {}
       },
       "source": [
+        "# Save model checkpoint\n",
         "model_name = \"lstm.net\"\n",
         "\n",
         "checkpoint = {'n_hidden': model.hidden_size, \n",
@@ -719,6 +872,26 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iAKS6eTucQw6",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Sampling to generate text \n",
+        "\n",
+        "This is the super interesting part. Since we have a probability distribution over our characers. \n",
+        "\n",
+        "1. We pass in a random character to our trained network. \n",
+        "\n",
+        "2. This gives a prediction for each character in out vocab. We then take the top 5 probabilites from this distribution, specified by the top_k parameter. \n",
+        "\n",
+        "3. We then sample randomly from this distribution and pass the output of that into the next time step. \n",
+        "\n",
+        "4. This way we generate a sequence of data.\n"
+      ]
     },
     {
       "cell_type": "code",
